Adding those endpoints to update limits and non limits manually
